--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,6 +22,7 @@
     {{ render_field(form.username) }}
     {{ render_field(form.csrf_token) }}
     {{ render_field(form.email) }}
+    {{ render_field(form.zipcode) }}
     {{ render_field(form.password) }}
     {{ render_field(form.confirm) }}
     {{ render_field(form.accept_tos) }}
