Fix button on login form

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
     {{ render_field(form.csrf_token) }}
     {{ render_field(form.password) }}
   </dl>
-  <p><input type=submit value=Register>
+  <p><input type=submit value="Log In">
 </form>
 {% endblock %}
 
