--- a/templates/legislators.html
+++ b/templates/legislators.html
@@ -13,16 +13,18 @@
 <ul>
   {% if people %}
   {% else %}
-    <i>That's odd, noone represents {{zipcode}}!</i>
+    <i>That's odd, noone represents {{zipcode}}&hellip;</i>
   {% endif %}
   {% for person in people %}
   <li>
-    {{ person['title'] }} {{ person['firstname'] }} {{ person['middlename'] }} {{ person['lastname'] }} ({{ person['party'] }};
+    <h4>
+      {{ person['title'] }} {{ person['firstname'] }} {{ person['middlename'] }} {{ person['lastname'] }} ({{ person['party'] }};
     {% if person['chamber'] == 'house' %}
      district {{person['district']}})
     {% elif person['chamber'] == 'senate' %}
      {{person['district']}})
     {% endif %}
+  </h4>
     <ul>
       <li><a href="/tacos/?crp_id={{person['crp_id']}}">Event Calendar</a></li>
       {% if person['twitter_id'] %}
