--- a/templates/events.html
+++ b/templates/events.html
@@ -10,12 +10,31 @@
 <ul>
 {% for event in events %}
   <li>
-    Beneficiaries: {{ ", ".join(event['fields']["beneficiaries"]) }},
-    Location: {{ event['fields']["venue"] }},
-    Entertainment: {{ event['fields']['entertainment'] }},
-    Date: {{ event['fields']["start_date"] }},
-    Start time: {{ event['fields']['start_time'] }},
-    End time: {{ event['fields']['end_time'] }}
+    {% if event['fields']['hosts'] %}
+      <h4> Hosts: {{ ", ".join(event['fields']['hosts']) }} </h4>
+    {% else %}
+      <h4> This event has no host information. </h4>
+    {% endif %}
+    <ul>
+      {% if event['fields']['venue'] %}
+        <li> Location: {{ event['fields']["venue"] }}, </li>
+      {% endif %}
+      {% if event['fields']['entertainment'] %}
+        <li> Entertainment: {{ event['fields']['entertainment'] }}, </li>
+      {% endif %}
+      {% if event['fields']['entertainment'] %}
+        <li> Date: {{ event['fields']["start_date"] }}, </li>
+      {% endif %}
+      {% if event['fields']['entertainment'] %}
+        <li> Start time: {{ event['fields']['start_time'] }}, </li>
+      {% endif %}
+      {% if event['fields']['end_time'] %}
+        <li> End time: {{ event['fields']['end_time'] }} </li>
+      {% endif %}
+      {% if event['fields']['entertainment'] %}
+        <li> Contributions: {{ event['fields']['contributions_info'] }} </li>
+      {% endif %}
+    </ul>
   </li>
 {% endfor %}
 </ul>
