--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,9 @@
                     <ul class="nav nav-list">
                         <li class="nav-header"><a href="{{ url_for('welcome') }}">home</a></li>
                         <li><a href="{{ url_for('welcome') }}">about</a></li>
-                        <li><a href="{{ url_for('legislators') }}">your representatives</a></li>
+                        <li><a href="/events/N00009638">pres. obama</a></li>
+                        <li><a href="/events/N00000286">gov. romney</a></li>
+                        <li><a href="{{ url_for('legislators') }}">your legislators</a></li>
                         {% if user_authenticated %}
                             <li><a href="/">Profile</a></li>
                             <li><a href="{{ url_for('logout') }}">logout</a></li>
