--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/static/stylesheets/bootstrap.css">
     <link rel="stylesheet" href="/static/stylesheets/lfln.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    <title>{% block title %}Welcome{% endblock %} | My Webpage</title>
+    <title>{% block title %}Welcome{% endblock %} | LFLN</title>
 </head>
 <body>
     <div class="container-fluid">
