Remove extra commas.

--- a/templates/events.html
+++ b/templates/events.html
@@ -20,16 +20,16 @@
     {% endif %}
     <ul>
       {% if event['venue'] %}
-        <li> Location: {{ event["venue"] }}, </li>
+        <li> Location: {{ event["venue"] }} </li>
       {% endif %}
       {% if event['entertainment'] %}
-        <li> Entertainment: {{ event['entertainment'] }}, </li>
+        <li> Entertainment: {{ event['entertainment'] }} </li>
       {% endif %}
       {% if event['entertainment'] %}
-        <li> Date: {{ event["start_date"] }}, </li>
+        <li> Date: {{ event["start_date"] }} </li>
       {% endif %}
       {% if event['entertainment'] %}
-        <li> Start time: {{ event['start_time'] }}, </li>
+        <li> Start time: {{ event['start_time'] }} </li>
       {% endif %}
       {% if event['end_time'] %}
         <li> End time: {{ event['end_time'] }} </li>
