--- a/templates/events.html
+++ b/templates/events.html
@@ -7,6 +7,11 @@
     
 <h3>Events for {{ person['title'] }} {{ person['firstname'] }} {{ person['middlename'] }} {{ person['lastname'] }} ({{ person['party'] }}) </h3>
 <br/>
+
+<a href="https://twitter.com/intent/tweet?text={% block tweet_text %}http://www.lobbyistsfromlastnight.com{% endblock %}" class="twitter-share-button" data-count="none" data-lang="en" data-size="large">{% block default_twitter_label %}Tweet to your senator{% endblock %}</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+
 <ul>
 {% if event_count < 1 %}
   <h4> No events were found for your congressman at this time. Maybe our API is down, or maybe he needs some love. </h4>
