--- a/templates/legislators.html
+++ b/templates/legislators.html
@@ -13,13 +13,15 @@
 <h3>Legislators for {{ zipcode }}</h3>
 <br/>
 
+
+
 {% for (chamber, people) in legislators.iteritems() %}
 <div style="float: left; margin-right: 50px; border-left: 1px solid rgb(223,223,223); padding-left: 50px;">
 <h3>{{chamber}}</h3>
 <ul>
   {% if people %}
   {% else %}
-    <i>That's odd, noone represents {{zipcode}}&hellip;</i>
+    <em>That's odd, noone represents {{zipcode}}&hellip;</em>
   {% endif %}
   {% for person in people %}
   <li>
