--- a/templates/legislators.html
+++ b/templates/legislators.html
@@ -33,6 +33,7 @@
      {{person['district']}})
     {% endif %}
   </h4>
+    <img src="http://api.twitter.com/1/users/profile_image/?screen_name={{person['twitter_id']}}&size=bigger" style="float: left; width:73px; height: 73px; margin-right: 25px;"/>
     <ul>
       <li><a href="/events/{{person['crp_id']}}">Event Calendar</a></li>
       {% if person['twitter_id'] %}
