--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="/static/stylesheets/bootstrap.css">
     <link rel="stylesheet" href="/static/stylesheets/lfln.css">
+    <script src="/static/javascript/events.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>{% block title %}Welcome{% endblock %} | LFLN</title>
 </head>
