Add suggested tweets functionality.

--- a/templates/events.html
+++ b/templates/events.html
@@ -70,7 +70,9 @@
     </td>
     
     </tr>
-  
+    Suggested tweets: {{ event['suggested_tweets'] }}
+    </ul>
+  </li>
 {% endfor %}
 </table>
 
