--- a/templates/events.html
+++ b/templates/events.html
@@ -30,7 +30,7 @@
     <th class="location"><a href="#" onclick="events_sort_by('venue', true, false, false); return false;">Location</th>
     <th class="hosts"><a href="#" onclick="events_sort_by('hosts', true, false, false); return false;">Hosts</th>
     <th class="contributions"><a href="#" onclick="events_sort_by('contributions_info', false, false, true); return false;">Contributions</th>
-    <th class="suggested_tweets"><a href="#" onclick="events_sort_by('suggested_tweets', true, false, false); return false;">Suggested Tweets</th>
+    <th class="suggested_tweets">Suggested Tweets</th>
     <th class="party_time">Political Party Time Listing</th>
   </tr>
   </thead>
