--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,7 +28,7 @@
                             <span class="nav_item"><a href="{{ url_for('login') }}">login</a></span>
                             <span class="nav_item"><a href="{{ url_for('signup') }}">sign up</a></span>
                             {% endif %}
-                            <span class="nav_item"><a href="{{ url_for('contact') }}">contact us</a></span>
+                            <span class="nav_item_last"><a href="{{ url_for('contact') }}">contact us</a></span>
                         </div>
                     </div>
                 </div>
