--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,16 @@
 {% block body %}
 {% block intro %} 
 
-Hello, world.
+<div class="span6">
+	<p class="about">Lobbyists From Last Night is a project made during the Comedy Hack Day in NYC. We’re tired of missing out on the pheasant hunts, BBQs and yacht parties that accompany a fat campaign contribution. We want pics, we want stories and we want answers.</p> 
+
+	<p class="about">Made using the Sunlight Congress API and Political Party Time.</p>
+</div>
+
+
+<div class="span6">
+	<p class="about">Sign-up form here?</p>
+</div>
 
 {% endblock %}
 
