--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,7 @@
     <script src="/static/javascript/events.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>{% block title %}Welcome{% endblock %} | LFLN</title>
+    <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
 </head>
 <body>
     <div class="container">
@@ -79,6 +80,23 @@
 
         </div>
     </div>
-    
+    <script type="text/javascript">
+  var _sf_async_config = { uid: 40654, domain: 'lobbyistsfromlastnight.com' };
+  (function() {
+    function loadChartbeat() {
+      window._sf_endpt = (new Date()).getTime();
+      var e = document.createElement('script');
+      e.setAttribute('language', 'javascript');
+      e.setAttribute('type', 'text/javascript');
+      e.setAttribute('src',
+        (("https:" == document.location.protocol) ? "https://a248.e.akamai.net/chartbeat.download.akamai.com/102508/" : "http://static.chartbeat.com/") +
+        "js/chartbeat.js");
+      document.body.appendChild(e);
+    };
+    var oldonload = window.onload;
+    window.onload = (typeof window.onload != 'function') ?
+      loadChartbeat : function() { oldonload(); loadChartbeat(); };
+  })();
+</script>
 </body>
 </html>
