--- a/templates/events.html
+++ b/templates/events.html
@@ -41,7 +41,9 @@
 
 <div id="tweet_overlay_wrapper">
 <div id="tweet_overlay">
-
+  <h2>Select your tweet</h2>
+  <div id="tweet_overlay_list"></div>
+  <div id="tweet_overlay_close">[<a href="#">close</a>]</div>
 </div>
 </div>
 
