--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,6 +4,8 @@
 {% block body %}
 {% block intro %} 
 
+<div id="zip_form">
+
 {% macro render_field(field) %}
   <dt>{{ field.label }}
   <dd>{{ field(**kwargs)|safe }}
@@ -17,18 +19,24 @@
   </dd>
 {% endmacro %}
 
+
 <form method="POST" action="/signup/">
-  <dl>
-    {{ render_field(form.username) }}
-    {{ render_field(form.csrf_token) }}
-    {{ render_field(form.email) }}
-    {{ render_field(form.zipcode) }}
-    {{ render_field(form.password) }}
-    {{ render_field(form.confirm) }}
-    {{ render_field(form.accept_tos) }}
-  </dl>
-  <p><input type=submit value=Register>
+	<fieldset>
+		<dl>
+			{{ render_field(form.username) }}
+			{{ render_field(form.csrf_token) }}
+			{{ render_field(form.email) }}
+			{{ render_field(form.zipcode) }}
+			{{ render_field(form.password) }}
+			{{ render_field(form.confirm) }}
+			{{ render_field(form.accept_tos) }}
+		</dl>
+		<input type=submit value=Register>
+	</fieldset>
 </form>
+
+</div>
+
 {% endblock %}
 
 
