click on logo to goto /

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="span12">
-                <div id="header">
+                <div id="header" onclick="window.location='/';" style="cursor: pointer;">
                     <div class="navigation">
                     	<div class="navigation_left">
                         	<span class="nav_item"><a href="{{ url_for('welcome') }}">home</a></span>
